fix: featured image on small screen

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -63,14 +63,18 @@ body {
   @apply hover:text-hot-pink hover:underline;
 }
 .prose img {
-  max-width: 120%;
   --child-width: 120%;
-  @apply rounded-2xl overflow-hidden border border-gray-400 bg-slate-500 child-past-parent;
+  @apply md:max-w-[120%];
+  @apply rounded-2xl overflow-hidden border border-gray-400 bg-slate-500;
+  @apply child-past-parent;
 }
 .child-past-parent {
-  position: relative;
-  width: 100vw;
-  left: calc(-0.5 * var(--child-width) + 50%);
+  @apply w-[100vw] relative;
+}
+@media (min-width: 768px) {
+  .child-past-parent {
+    left: calc(-0.5 * var(--child-width) + 50%);
+  }
 }
 
 /* 
